--- a/linear_regression_project.ipynb
+++ b/linear_regression_project.ipynb
@@ -29,7 +29,13 @@
     "     [1,2,5,1]]\n",
     "\n",
     "#TODO 创建一个 4*4 单位矩阵\n",
-    "I = None"
+    "def unit_matrix(r):\n",
+    "    m = [[0]*r for row in range(r)]#初始化r行r列的0矩阵\n",
+    "    for i in range(r):\n",
+    "        m[i][i] = 1\n",
+    "    return m\n",
+    "\n",
+    "I = unit_matrix(4)"
    ]
   },
   {
@@ -42,14 +48,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# TODO 返回矩阵的行数和列数\n",
     "def shape(M):\n",
-    "    return 0,0"
+    "    return len(M),len(M[0])"
    ]
   },
   {
@@ -70,6 +74,10 @@
     "# TODO 每个元素四舍五入到特定小数数位\n",
     "# 直接修改参数矩阵，无返回值\n",
     "def matxRound(M, decPts=4):\n",
+    "    for e in M:\n",
+    "        for i in range(len(e)):\n",
+    "            e[i] = round(e[i], decPts)\n",
+    "    # return M\n",
     "    pass"
    ]
   },
@@ -89,8 +97,10 @@
    "outputs": [],
    "source": [
     "# TODO 计算矩阵的转置\n",
+    "# 把M看作是由多个list zipped而成，使用*zipped解压，完成行列变换\n",
+    "# 使用map将tuple转成list\n",
     "def transpose(M):\n",
-    "    return None"
+    "    return map(list, zip(*M))"
    ]
   },
   {
@@ -110,7 +120,19 @@
    "source": [
     "# TODO 计算矩阵乘法 AB，如果无法相乘则返回None\n",
     "def matxMultiply(A, B):\n",
-    "    return None"
+    "    ra = shape(A)[0]\n",
+    "    ca = shape(A)[1]\n",
+    "    rb = shape(B)[0]\n",
+    "    cb = shape(B)[1]\n",
+    "    if ca == rb:\n",
+    "        m = [[0]*cb for row in range(ra)]#初始化row(A)col(B)的0矩阵\n",
+    "        for i in range(ra):\n",
+    "            for j in range(cb):\n",
+    "                for k in range(ca):\n",
+    "                    m[i][j] += A[i][k]*B[k][j]\n",
+    "        return m\n",
+    "    else:\n",
+    "        pass"
    ]
   },
   {
@@ -137,13 +159,39 @@
    "source": [
     "#TODO 测试1.2 返回矩阵的行和列\n",
     "\n",
+    "print '测试1.2 返回矩阵的行和列---------------------'\n",
+    "pp.pprint(B)\n",
+    "print (shape(B))\n",
+    "\n",
     "#TODO 测试1.3 每个元素四舍五入到特定小数数位\n",
+    "\n",
+    "print '测试1.3 每个元素四舍五入到特定小数数位---------------------'\n",
+    "C = [[1.0001,2.000002,3.000003,4.04040404,5.55555555,6.1616161616]]\n",
+    "pp.pprint(C)\n",
+    "matxRound(C)\n",
+    "pp.pprint(C)\n",
     "\n",
     "#TODO 测试1.4 计算矩阵的转置\n",
     "\n",
+    "print '测试1.4 计算矩阵的转置-----------------------'\n",
+    "pp.pprint(B)\n",
+    "pp.pprint (transpose(B))\n",
+    "\n",
     "#TODO 测试1.5 计算矩阵乘法AB，AB无法相乘\n",
     "\n",
-    "#TODO 测试1.5 计算矩阵乘法AB，AB可以相乘"
+    "print '测试1.5 计算矩阵乘法AB，AB无法相乘-----------------------'\n",
+    "B = transpose(B)\n",
+    "pp.pprint(A)\n",
+    "pp.pprint(B)\n",
+    "pp.pprint (matxMultiply(A,B))\n",
+    "\n",
+    "#TODO 测试1.5 计算矩阵乘法AB，AB可以相乘\n",
+    "\n",
+    "print '测试1.5 计算矩阵乘法AB，AB可以相乘-----------------------'\n",
+    "B = transpose(B)\n",
+    "pp.pprint(A)\n",
+    "pp.pprint(B)\n",
+    "pp.pprint (matxMultiply(A,B))"
    ]
   },
   {
@@ -179,9 +227,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# TODO 构造增广矩阵，假设A，b行数相同\n",
@@ -202,9 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# TODO r1 <---> r2\n",
@@ -261,9 +305,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# TODO 实现 Gaussain Jordan 方法求解 Ax = b\n",
@@ -325,9 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# TODO 构造 矩阵A，列向量b，其中 A 为奇异矩阵\n",
@@ -484,9 +524,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# TODO 构造线性函数\n",
@@ -509,9 +547,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import unittest\n",
@@ -664,21 +700,21 @@
   "anaconda-cloud": {},
   "celltoolbar": "Raw Cell Format",
   "kernelspec": {
-   "display_name": "Python [Root]",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "Python [Root]"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
