--- a/linear_regression_project.ipynb
+++ b/linear_regression_project.ipynb
@@ -11,11 +11,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 0, 0, 0], [0, 1, 0, 0], [0, 0, 1, 0], [0, 0, 0, 1]]\n"
+     ]
+    }
+   ],
    "source": [
     "# 这个项目设计来帮你熟悉 python list 和线性代数\n",
     "# 你不能调用任何python库，包括NumPy，来完成作业\n",
@@ -35,7 +41,8 @@
     "        m[i][i] = 1\n",
     "    return m\n",
     "\n",
-    "I = unit_matrix(4)"
+    "I = unit_matrix(4)\n",
+    "# print I"
    ]
   },
   {
@@ -47,13 +54,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(4, 4)\n"
+     ]
+    }
+   ],
    "source": [
     "# TODO 返回矩阵的行数和列数\n",
     "def shape(M):\n",
-    "    return len(M),len(M[0])"
+    "    return len(M),len(M[0])\n",
+    "# print shape(I)"
    ]
   },
   {
@@ -65,11 +81,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1.0, 0.0, 0.0, 0.0], [0.0, 1.0, 0.0, 0.0], [0.0, 0.0, 1.0, 0.0], [0.0, 0.0, 0.0, 1.0]]\n"
+     ]
+    }
+   ],
    "source": [
     "# TODO 每个元素四舍五入到特定小数数位\n",
     "# 直接修改参数矩阵，无返回值\n",
@@ -77,8 +99,10 @@
     "    for e in M:\n",
     "        for i in range(len(e)):\n",
     "            e[i] = round(e[i], decPts)\n",
-    "    # return M\n",
-    "    pass"
+    "#     return M\n",
+    "    pass\n",
+    "# matxRound(I)\n",
+    "# print I"
    ]
   },
   {
@@ -90,17 +114,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 2, 1], [2, 3, 2], [3, 3, 5]]\n"
+     ]
+    }
+   ],
    "source": [
     "# TODO 计算矩阵的转置\n",
     "# 把M看作是由多个list zipped而成，使用*zipped解压，完成行列变换\n",
     "# 使用map将tuple转成list\n",
     "def transpose(M):\n",
-    "    return map(list, zip(*M))"
+    "    return map(list, zip(*M))\n",
+    "# print transpose(A)"
    ]
   },
   {
@@ -112,11 +143,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[8, 14, 24, 18], [11, 19, 30, 28], [10, 18, 34, 20]]\n"
+     ]
+    }
+   ],
    "source": [
     "# TODO 计算矩阵乘法 AB，如果无法相乘则返回None\n",
     "def matxMultiply(A, B):\n",
@@ -132,7 +169,9 @@
     "                    m[i][j] += A[i][k]*B[k][j]\n",
     "        return m\n",
     "    else:\n",
-    "        pass"
+    "        pass\n",
+    "\n",
+    "# print matxMultiply(A, B)"
    ]
   },
   {
@@ -151,46 +190,141 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "测试1.2 返回矩阵的行和列---------------------\n",
+      "\n",
+      "[[1, 2, 3, 5],\n",
+      " [2, 3, 3, 5],\n",
+      " [1, 2, 5, 1]]\n",
+      "\n",
+      "\n",
+      "(3, 4)\n",
+      "\n",
+      "\n",
+      "测试1.3 每个元素四舍五入到特定小数数位---------------------\n",
+      "\n",
+      "[[1.0001,\n",
+      "  2.000002,\n",
+      "  3.000003,\n",
+      "  4.04040404,\n",
+      "  5.55555555,\n",
+      "  6.1616161616]]\n",
+      "\n",
+      "\n",
+      "[[1.0001,\n",
+      "  2.0,\n",
+      "  3.0,\n",
+      "  4.0404,\n",
+      "  5.5556,\n",
+      "  6.1616]]\n",
+      "\n",
+      "\n",
+      "测试1.4 计算矩阵的转置-----------------------\n",
+      "\n",
+      "[[1, 2, 3, 5],\n",
+      " [2, 3, 3, 5],\n",
+      " [1, 2, 5, 1]]\n",
+      "\n",
+      "\n",
+      "[[1, 2, 1],\n",
+      " [2, 3, 2],\n",
+      " [3, 3, 5],\n",
+      " [5, 5, 1]]\n",
+      "\n",
+      "\n",
+      "测试1.5 计算矩阵乘法AB，AB无法相乘-----------------------\n",
+      "\n",
+      "[[1, 2, 3],\n",
+      " [2, 3, 3],\n",
+      " [1, 2, 5]]\n",
+      "\n",
+      "\n",
+      "[[1, 2, 1],\n",
+      " [2, 3, 2],\n",
+      " [3, 3, 5],\n",
+      " [5, 5, 1]]\n",
+      "\n",
+      "\n",
+      "None\n",
+      "\n",
+      "\n",
+      "测试1.5 计算矩阵乘法AB，AB可以相乘-----------------------\n",
+      "\n",
+      "\n",
+      "\n",
+      "[[1, 2, 3],\n",
+      " [2, 3, 3],\n",
+      " [1, 2, 5]]\n",
+      "\n",
+      "\n",
+      "[[1, 2, 3, 5],\n",
+      " [2, 3, 3, 5],\n",
+      " [1, 2, 5, 1]]\n",
+      "\n",
+      "\n",
+      "[[8, 14, 24, 18],\n",
+      " [11, 19, 30, 28],\n",
+      " [10, 18, 34, 20]]\n"
+     ]
+    }
+   ],
    "source": [
+    "import pprint\n",
+    "\n",
+    "pp = pprint.PrettyPrinter(width=20)\n",
+    "\n",
     "#TODO 测试1.2 返回矩阵的行和列\n",
     "\n",
-    "print '测试1.2 返回矩阵的行和列---------------------'\n",
+    "print '测试1.2 返回矩阵的行和列---------------------\\n'\n",
     "pp.pprint(B)\n",
+    "print '\\n'\n",
     "print (shape(B))\n",
+    "print '\\n'\n",
     "\n",
     "#TODO 测试1.3 每个元素四舍五入到特定小数数位\n",
     "\n",
-    "print '测试1.3 每个元素四舍五入到特定小数数位---------------------'\n",
+    "print '测试1.3 每个元素四舍五入到特定小数数位---------------------\\n'\n",
     "C = [[1.0001,2.000002,3.000003,4.04040404,5.55555555,6.1616161616]]\n",
     "pp.pprint(C)\n",
     "matxRound(C)\n",
+    "print '\\n'\n",
     "pp.pprint(C)\n",
+    "print '\\n'\n",
     "\n",
     "#TODO 测试1.4 计算矩阵的转置\n",
     "\n",
-    "print '测试1.4 计算矩阵的转置-----------------------'\n",
+    "print '测试1.4 计算矩阵的转置-----------------------\\n'\n",
     "pp.pprint(B)\n",
+    "print '\\n'\n",
     "pp.pprint (transpose(B))\n",
+    "print '\\n'\n",
     "\n",
     "#TODO 测试1.5 计算矩阵乘法AB，AB无法相乘\n",
     "\n",
-    "print '测试1.5 计算矩阵乘法AB，AB无法相乘-----------------------'\n",
+    "print '测试1.5 计算矩阵乘法AB，AB无法相乘-----------------------\\n'\n",
     "B = transpose(B)\n",
     "pp.pprint(A)\n",
+    "print '\\n'\n",
     "pp.pprint(B)\n",
+    "print '\\n'\n",
     "pp.pprint (matxMultiply(A,B))\n",
+    "print '\\n'\n",
     "\n",
     "#TODO 测试1.5 计算矩阵乘法AB，AB可以相乘\n",
     "\n",
-    "print '测试1.5 计算矩阵乘法AB，AB可以相乘-----------------------'\n",
+    "print '测试1.5 计算矩阵乘法AB，AB可以相乘-----------------------\\n'\n",
     "B = transpose(B)\n",
+    "print '\\n'\n",
     "pp.pprint(A)\n",
+    "print '\\n'\n",
     "pp.pprint(B)\n",
+    "print '\\n'\n",
     "pp.pprint (matxMultiply(A,B))"
    ]
   },
@@ -227,7 +361,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# TODO 构造增广矩阵，假设A，b行数相同\n",
@@ -248,7 +384,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# TODO r1 <---> r2\n",
@@ -305,7 +443,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# TODO 实现 Gaussain Jordan 方法求解 Ax = b\n",
@@ -367,7 +507,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# TODO 构造 矩阵A，列向量b，其中 A 为奇异矩阵\n",
@@ -524,7 +666,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# TODO 构造线性函数\n",
@@ -547,7 +691,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import unittest\n",
