--- a/linear_regression_project.ipynb
+++ b/linear_regression_project.ipynb
@@ -360,15 +360,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# TODO 构造增广矩阵，假设A，b行数相同\n",
+    "# 为了避免原矩阵的改变，使用deepcopy方法复制一个相同的矩阵\n",
+    "from copy import deepcopy\n",
+    "\n",
     "def augmentMatrix(A, b):\n",
-    "    return None"
+    "    a = deepcopy(A)\n",
+    "    for i in range(len(a)):\n",
+    "        a[i].append(b[i][0])\n",
+    "    return a"
    ]
   },
   {
