--- a/linear_regression_project.ipynb
+++ b/linear_regression_project.ipynb
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -396,16 +396,21 @@
     "# TODO r1 <---> r2\n",
     "# 直接修改参数矩阵，无返回值\n",
     "def swapRows(M, r1, r2):\n",
+    "    M[r1],M[r2] = M[r2],M[r1]\n",
     "    pass\n",
     "\n",
     "# TODO r1 <--- r1 * scale， scale!=0\n",
     "# 直接修改参数矩阵，无返回值\n",
     "def scaleRow(M, r, scale):\n",
+    "    for i in range(len(M[r])):\n",
+    "        M[r][i] = M[r][i]*scale\n",
     "    pass\n",
     "\n",
     "# TODO r1 <--- r1 + r2*scale\n",
     "# 直接修改参数矩阵，无返回值\n",
     "def addScaledRow(M, r1, r2, scale):\n",
+    "    for i in range(len(M[r1])):\n",
+    "        M[r1][i] += M[r2][i] * scale\n",
     "    pass"
    ]
   },
