--- a/linear_regression_project.ipynb
+++ b/linear_regression_project.ipynb
@@ -11,17 +11,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[1, 0, 0, 0], [0, 1, 0, 0], [0, 0, 1, 0], [0, 0, 0, 1]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 这个项目设计来帮你熟悉 python list 和线性代数\n",
     "# 你不能调用任何python库，包括NumPy，来完成作业\n",
@@ -54,17 +46,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(4, 4)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# TODO 返回矩阵的行数和列数\n",
     "def shape(M):\n",
@@ -81,17 +65,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[1.0, 0.0, 0.0, 0.0], [0.0, 1.0, 0.0, 0.0], [0.0, 0.0, 1.0, 0.0], [0.0, 0.0, 0.0, 1.0]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# TODO 每个元素四舍五入到特定小数数位\n",
     "# 直接修改参数矩阵，无返回值\n",
@@ -114,17 +90,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[1, 2, 1], [2, 3, 2], [3, 3, 5]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# TODO 计算矩阵的转置\n",
     "# 把M看作是由多个list zipped而成，使用*zipped解压，完成行列变换\n",
@@ -143,17 +111,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[8, 14, 24, 18], [11, 19, 30, 28], [10, 18, 34, 20]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# TODO 计算矩阵乘法 AB，如果无法相乘则返回None\n",
     "def matxMultiply(A, B):\n",
@@ -190,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -360,8 +320,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# TODO 构造增广矩阵，假设A，b行数相同\n",
@@ -387,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -402,8 +364,11 @@
     "# TODO r1 <--- r1 * scale， scale!=0\n",
     "# 直接修改参数矩阵，无返回值\n",
     "def scaleRow(M, r, scale):\n",
-    "    for i in range(len(M[r])):\n",
-    "        M[r][i] = M[r][i]*scale\n",
+    "    if scale == 0:\n",
+    "        raise ValueError\n",
+    "    else:\n",
+    "        for i in range(len(M[r])):\n",
+    "            M[r][i] = M[r][i]*scale\n",
     "    pass\n",
     "\n",
     "# TODO r1 <--- r1 + r2*scale\n",
@@ -451,11 +416,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1.0], [2.0], [4.0]]\n"
+     ]
+    }
+   ],
    "source": [
     "# TODO 实现 Gaussain Jordan 方法求解 Ax = b\n",
     "\n",
@@ -472,8 +443,65 @@
     "\"\"\"\n",
     "\n",
     "def gj_Solve(A, b, decPts=4, epsilon = 1.0e-16):\n",
-    " \n",
-    "    return None"
+    "    res = [[0] for row in A]  # 用于存储计算结果\n",
+    "    rA = shape(A)[0]\n",
+    "    rb = shape(b)[0]\n",
+    "    if rA != rb: # 检查A，b是否行数相同\n",
+    "        return None\n",
+    "    else:\n",
+    "        s = 0 # 用于储存忽略行变换的次数，此次数与行数相等时，说明得到了结果\n",
+    "        Ab = augmentMatrix(A, b) # 构造增广矩阵Ab\n",
+    "        j = 0\n",
+    "        while j < (shape(Ab)[1]):\n",
+    "            c = [] # 用于储存当前列主对角线及以下元素\n",
+    "            for i in range(j, shape(Ab)[0]):\n",
+    "                c.append(abs(Ab[i][j])) # 对元素取绝对值\n",
+    "            # print '第{0}列主对角线及以下元素绝对值的列表为{1}'.format(j, c)\n",
+    "            m = max(c) # 获得c中的最大值\n",
+    "            # print '第{0}列的最大值为{1}'.format(j, m)\n",
+    "            # print 'm:', m\n",
+    "            # print 'i:', i \n",
+    "            # print 'j:', j\n",
+    "            r = c.index(max(c)) + j # 获得绝对值最大的元素所在的行\n",
+    "            if m <= epsilon:\n",
+    "                return None\n",
+    "            elif m == 1.0 and r == j:\n",
+    "                s += 1\n",
+    "                j += 1\n",
+    "                # print 's+1'\n",
+    "                pass\n",
+    "            else:\n",
+    "                # print '第{0}列最大值所在的行为{1}'.format(j, r)\n",
+    "                swapRows(Ab, j, r) # 使用第一个行变换，将绝对值最大值所在行交换到对角线元素所在行（行c）\n",
+    "                # pp.pprint(Ab)\n",
+    "                scale = 1.0/Ab[j][j] # 第j行第j列元素的乘子\n",
+    "                # print '第二个行变换的scale是：', scale\n",
+    "                scaleRow(Ab, j, scale) # 使用第二个行变换，将列c的对角线元素缩放为1\n",
+    "                # print '第二个行变换的结果是：'\n",
+    "                # pp.pprint(Ab)\n",
+    "                for k in range(shape(Ab)[0]): # 多次使用第三个行变换，将列c的其他元素消为0\n",
+    "                    if k == j:\n",
+    "                        pass\n",
+    "                    else:\n",
+    "                        addScaledRow(Ab, k, j, -Ab[k][j]) # 使用第三个行变换，将列c的其他元素消为0\n",
+    "                        # print '第{0}次使用第三个行变换'.format(k)\n",
+    "                        # pp.pprint(Ab)\n",
+    "                j = 0\n",
+    "                s = 0\n",
+    "            # print 's:', s\n",
+    "            if s == shape(Ab)[0]:\n",
+    "                break\n",
+    "\n",
+    "        matxRound(Ab, decPts) # 对增广矩阵元素进行四舍五入到特定小数位\n",
+    "        resc = shape(Ab)[0]\n",
+    "        for x in range(shape(Ab)[0]):\n",
+    "            res[x][0] += Ab[x][resc]\n",
+    "        return res\n",
+    "    \n",
+    "a = [[1,3,1],[2,1,1],[2,2,1]]\n",
+    "b = [[11],[8],[10]]\n",
+    "\n",
+    "print gj_Solve(a,b)"
    ]
   },
   {
@@ -503,7 +531,40 @@
    "source": [
     "TODO 请使用 latex （请参照题目的 latex 写法学习）\n",
     "\n",
-    "TODO 证明："
+    "TODO 证明：\n",
+    "\n",
+    "$ A^{T} = \\begin{bmatrix}\n",
+    "I & Z^{T} \\\\ \n",
+    "X^{T} & Y^{T}\n",
+    "\\end{bmatrix} $\n",
+    "\n",
+    "$ \\left | A^{T} \\right | = \\left | I \\right |\\ast \\left | Y^{T} \\right | - \\left | X^{T} \\right | * \\left | Z^{T} \\right | $\n",
+    "\n",
+    "$ \\because  \\text{Y 的第一列全0} $\n",
+    "\n",
+    "$ \\therefore Y^{T} \\text{的第一行全0} $\n",
+    "\n",
+    "$ \\text{根据行列式的性质：如果行列式中有一行元素全为零,则行列式的值为零} $\n",
+    "\n",
+    "$ \\therefore \\left | Y^{T} \\right | = 0 $\n",
+    "\n",
+    "$ \\because I \\text{是单位矩阵} $\n",
+    "\n",
+    "$ \\therefore \\left | I \\right | = 1 $\n",
+    "\n",
+    "$ \\because \\text{Z 为全0矩阵} $\n",
+    "\n",
+    "$ \\therefore \\left | Z^{T} \\right | = 0 $\n",
+    "\n",
+    "$ \\text{综上所述} $\n",
+    "\n",
+    "$ \\left | A^{T} \\right | = 0 $\n",
+    "\n",
+    "$ \\because \\left | A \\right | = \\left | A^{T} \\right | $\n",
+    "\n",
+    "$ \\therefore \\left | A \\right | = 0 $\n",
+    "\n",
+    "$ \\therefore \\text{A为奇异矩阵} $"
    ]
   },
   {
@@ -515,18 +576,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "测试奇异矩阵的结果---------------------\n",
+      "\n",
+      "[[1, 0, 4],\n",
+      " [0, 1, 0],\n",
+      " [0, 0, 0]]\n",
+      "\n",
+      "\n",
+      "[[1], [2], [3]]\n",
+      "\n",
+      "\n",
+      "None\n",
+      "\n",
+      "\n",
+      "测试非奇异矩阵的结果---------------------\n",
+      "\n",
+      "[[1, 3, 1],\n",
+      " [2, 1, 1],\n",
+      " [2, 2, 1]]\n",
+      "\n",
+      "\n",
+      "[[11], [8], [10]]\n",
+      "\n",
+      "\n",
+      "求解 x 使得 Ax = b\n",
+      "\n",
+      "[[1.0],\n",
+      " [2.0],\n",
+      " [4.0]]\n",
+      "\n",
+      "\n",
+      "计算 Ax \n",
+      "\n",
+      "[[11.0],\n",
+      " [8.0],\n",
+      " [10.0]]\n",
+      "\n",
+      "\n",
+      "比较 Ax 与 b： \n",
+      "\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "# TODO 构造 矩阵A，列向量b，其中 A 为奇异矩阵\n",
-    "\n",
     "# TODO 构造 矩阵A，列向量b，其中 A 为非奇异矩阵\n",
     "# TODO 求解 x 使得 Ax = b\n",
     "# TODO 计算 Ax\n",
-    "# TODO 比较 Ax 与 b"
+    "# TODO 比较 Ax 与 b\n",
+    "\n",
+    "print '测试奇异矩阵的结果---------------------\\n'\n",
+    "A = [[1,0,4],[0,1,0],[0,0,0]]\n",
+    "b = [[1],[2],[3]]\n",
+    "\n",
+    "pp.pprint(A)\n",
+    "print '\\n'\n",
+    "pp.pprint(b)\n",
+    "print '\\n'\n",
+    "print gj_Solve(A, b)\n",
+    "print '\\n'\n",
+    "\n",
+    "print '测试非奇异矩阵的结果---------------------\\n'\n",
+    "A = [[1,3,1],[2,1,1],[2,2,1]]\n",
+    "b = [[11],[8],[10]]\n",
+    "\n",
+    "pp.pprint(A)\n",
+    "print '\\n'\n",
+    "pp.pprint(b)\n",
+    "print '\\n'\n",
+    "\n",
+    "print '求解 x 使得 Ax = b\\n'\n",
+    "\n",
+    "x = gj_Solve(A, b)\n",
+    "\n",
+    "pp.pprint(x)\n",
+    "print '\\n'\n",
+    "print '计算 Ax \\n'\n",
+    "\n",
+    "Ax = matxMultiply(A, x)\n",
+    "\n",
+    "pp.pprint(Ax)\n",
+    "print '\\n'\n",
+    "\n",
+    "print '比较 Ax 与 b： \\n'\n",
+    "\n",
+    "def compare(A, B):\n",
+    "    if A == B:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "\n",
+    "print compare(Ax,b)"
    ]
   },
   {
@@ -699,11 +847,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "test_addScaleRow (__main__.LinearRegressionTestCase) ... ok\n",
+      "test_augmentMatrix (__main__.LinearRegressionTestCase) ... ok\n",
+      "test_gj_Solve (__main__.LinearRegressionTestCase) ... ok\n",
+      "test_matxMultiply (__main__.LinearRegressionTestCase) ... ok\n",
+      "test_matxRound (__main__.LinearRegressionTestCase) ... ok\n",
+      "test_scaleRow (__main__.LinearRegressionTestCase) ... ok\n",
+      "test_shape (__main__.LinearRegressionTestCase) ... ok\n",
+      "test_swapRows (__main__.LinearRegressionTestCase) ... ok\n",
+      "test_transpose (__main__.LinearRegressionTestCase) ... ok\n",
+      "\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 9 tests in 0.262s\n",
+      "\n",
+      "OK\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<unittest.runner.TextTestResult run=9 errors=0 failures=0>"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import unittest\n",
     "import numpy as np\n",
@@ -849,6 +1026,15 @@
     "suite = unittest.TestLoader().loadTestsFromTestCase(LinearRegressionTestCase)\n",
     "unittest.TextTestRunner(verbosity=3).run(suite)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
