--- a/linear_regression_project.ipynb
+++ b/linear_regression_project.ipynb
@@ -734,7 +734,85 @@
    "source": [
     "TODO 请使用 latex （参照题目的 latex写法学习）\n",
     "\n",
-    "TODO 证明："
+    "TODO 证明：\n",
+    "\n",
+    "$$\n",
+    "\\frac{\\partial E}{\\partial m} = 2\\sum_{i = 1}^{n}(y_{i}-mx_{i}-b)\\frac{\\partial (y_{i}-mx_{i}-b)}{\\partial m}\n",
+    "$$\n",
+    "$$\n",
+    "=2\\sum_{i = 1}^{n}(y_{i}-mx_{i}-b)(-x_{i})\n",
+    "$$\n",
+    "$$\n",
+    "=\\sum_{i = 1}^{n}-2x_{i}(y_{i}-mx_{i}-b)\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "\\frac{\\partial E}{\\partial b} = 2\\sum_{i = 1}^{n}(y_{i}-mx_{i}-b)\\frac{\\partial (y_{i}-mx_{i}-b)}{\\partial b}\n",
+    "$$\n",
+    "$$\n",
+    "=2\\sum_{i = 1}^{n}(y_{i}-mx_{i}-b)(-1)\n",
+    "$$\n",
+    "$$\n",
+    "=\\sum_{i = 1}^{n}-2(y_{i}-mx_{i}-b)\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "\\begin{bmatrix}\n",
+    "    \\frac{\\partial E}{\\partial m} \\\\\n",
+    "    \\frac{\\partial E}{\\partial b} \n",
+    "\\end{bmatrix} = \n",
+    "\\begin{bmatrix}\n",
+    "\\sum_{i = 1}^{n}-2x_{i}(y_{i}-mx_{i}-b) \\\\ \n",
+    "\\sum_{i = 1}^{n}-2(y_{i}-mx_{i}-b)\n",
+    "\\end{bmatrix}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "2X^TXh - 2X^TY =\n",
+    "2X^T(Xh - Y)\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "(Xh - Y) = \n",
+    "\\begin{bmatrix}\n",
+    "mx_{1} + b - y_{_{1}} \\\\ \n",
+    "mx_{2} + b - y_{_{2}} \\\\ \n",
+    "\\cdots \\\\ \n",
+    "mx_{n} + b - y_{_{n}} \n",
+    "\\end{bmatrix}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "2X^T(Xh - Y) = \n",
+    "2\\begin{bmatrix}\n",
+    "\\sum_{i=1}^{n}(mx_{i} + b - y_{_{i}})x_{i} \\\\ \n",
+    "\\sum_{i=1}^{n}(mx_{i} + b - y_{_{i}}) \\\\ \n",
+    "\\end{bmatrix}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "=\n",
+    "\\begin{bmatrix}\n",
+    "\\sum_{i = 1}^{n}-2x_{i}(y_{i}-mx_{i}-b) \\\\ \n",
+    "\\sum_{i = 1}^{n}-2(y_{i}-mx_{i}-b)\n",
+    "\\end{bmatrix}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "= \n",
+    "\\begin{bmatrix}\n",
+    "    \\frac{\\partial E}{\\partial m} \\\\\n",
+    "    \\frac{\\partial E}{\\partial b} \n",
+    "\\end{bmatrix}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "\\text{即：}\n",
+    "\\begin{bmatrix}\n",
+    "    \\frac{\\partial E}{\\partial m} \\\\\n",
+    "    \\frac{\\partial E}{\\partial b} \n",
+    "\\end{bmatrix} = 2X^TXh - 2X^TY\n",
+    "$$"
    ]
   },
   {
