--- a/linear_regression_project.ipynb
+++ b/linear_regression_project.ipynb
@@ -876,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -887,8 +887,21 @@
     "参数：(x,y) 二元组列表\n",
     "返回：m，b\n",
     "'''\n",
+    "# 把方程看成AX=b的形式，利用gj_Solve函数求解\n",
     "def linearRegression(points):\n",
-    "    return 0,0"
+    "    X = [[points[i][0],1] for i in range(len(points))]\n",
+    "    Y = [[points[i][1]]for i in range(len(points))]\n",
+    "\n",
+    "    XT = transpose(X)\n",
+    "\n",
+    "    A = matxMultiply(XT, X)\n",
+    "    b = matxMultiply(XT, Y)\n",
+    "\n",
+    "    h = gj_Solve(A, b)\n",
+    "\n",
+    "    m = h[0]\n",
+    "    b = h[1]\n",
+    "    return m, b"
    ]
   },
   {
@@ -900,18 +913,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1.9773] [3.8671]\n"
+     ]
+    }
+   ],
    "source": [
     "# TODO 构造线性函数\n",
+    "\n",
+    "m = 2\n",
+    "b = 4\n",
     "\n",
     "# TODO 构造 100 个线性函数上的点，加上适当的高斯噪音\n",
     "import random\n",
     "\n",
-    "#TODO 对这100个点进行线性回归，将线性回归得到的函数和原线性函数比较"
+    "gs = [random.gauss(0,1) for i in range(100)] # 产生100个服从标准正态分布的数\n",
+    "x = [random.uniform(-10,10) for i in range(100)]\n",
+    "y = [m*x[i] + b + gs[i] for i in range(100)] # y值加上高斯噪音\n",
+    "points = map(list,zip(x, y))\n",
+    "\n",
+    "#TODO 对这100个点进行线性回归，将线性回归得到的函数和原线性函数比较\n",
+    "\n",
+    "m_g = linearRegression(points)[0]\n",
+    "b_g = linearRegression(points)[1]\n",
+    "\n",
+    "print m_g, b_g"
    ]
   },
   {
